--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div id="load">隐形</div>
         </div>
     </div>
-    <script src="//cdn.bootcss.com/jquery/3.3.1/core.js"></script>
+    <script src="//cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <script src="./js/exposure.js"></script>
     <script src="./js/waterfall.js"></script>
     <script>
