--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
        function getData(callback){
         $.ajax({
-            url: 'http://platform.sina.com.cn/slide/album_tech',
+            url: '//platform.sina.com.cn/slide/album_tech',
             type: 'get',
             dataType: "jsonp",
             jsonp: "jsoncallback",
